k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: task-service

spec:
  selector:
    app: task-deployment

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: NodePort
